styles.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  --white: #ffffff;
  --gray1: #333333;
  --gray2: #555555;
  --gray3: #cccccc;
  --gray4: #aaaaaa;

  --black: #080808;
  --teal: #006060;
  --lightteal: #008080;
  --purple: #800080;
  --navy: #000080;
  --cyan: #17a2b8;
  --violetred: #c71585;
  --red: #ff0000;
  --orange: #ffa500;
  --green: #006400;
}

body {
  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 1.2em;
  color: var(--gray1);
}

h1 {
  text-align: center;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #242424;
  z-index: 1000; /*priority over others*/
}

form {
  width: 400px;
}

.back {
  background: #181a1b;
}

.nav-menu a {
  color: white;
  text-decoration: none;
  margin-top: 8px;
}

.navbar {
  min-height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px 24px;
  color: white;
}

.nav-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 60px;
  list-style: none;
}

.nav-branding {
  font-size: 2rem;
  color: white;
  text-decoration: none;
}

.nav-link {
  transition: 0.7s ease;
  color: white;
}

.nav-link:hover {
  color: dodgerblue;
}

.hamburger {
  display: none;
  cursor: pointer;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: white;
}

@media (max-width: 768px) {
  .hamburger {
    display: block;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }
  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .nav-menu {
    position: fixed;
    left: -100%;
    top: 70px;
    gap: 0;
    flex-direction: column;
    background-color: #242424;
    width: 100%;
    text-align: center;
    transition: 0.3s;
    z-index: 100;
  }

  .nav-item {
    margin: 16px 0;
  }

  .nav-menu.active {
    left: 0;
  }
}

/* about */
.container {
  display: flex;
  flex-direction: row;
}

.leftside {
  flex: 1;
}

.rightside {
  flex: 1;
}

.intro {
  color: white;
  padding-top: 125px;
  font-family: 'Cascadia Code', sans-serif;
  font-size: 16px;
  text-align: left;
}

.intro-name {
  color: #00ffff;
  text-align: left;
  font-family: 'Cascadia Code', sans-serif;
  font-size: 40px;
}

.intro-bio {
  color: white;
  font-family: 'Cascadia Code', sans-serif;
  font-size: 20px;
  text-align: left;
}

.intro-bio-cont {
  color: white;
  font-family: 'Cascadia Code', sans-serif;
  font-size: 16px;
  text-align: left;
}
.intro-container {
  margin: 0 auto;
  max-width: 375px;
  margin-right: 50px;
  padding-left: 50px;
}

.intro-list {
  list-style-type: disc;
  color: white;
  font-family: 'Cascadia Code', sans-serif;
  font-size: 16px;
}

.about-container {
  margin-left: 75px;
  max-width: 400px;
  padding-top: 125px;
}

.socials {
  display: flex;
  background: white;
  height: 70px;
  width: 70px;
  margin: 10px 20px;
  padding: 10px;
  border: 5px solid;
  border-color: #121212;
  border-radius: 10px;
}

.s_icon {
  height: 40px;
  width: 40px;
}

.socials-container {
  display: flex;
}

.pfp {
  height: 450px;
  width: 325px;
  border-radius: 15px;
  margin-right: 15px;
  border: 5px solid;
  border-color: #121212;
  margin-bottom: 10px;
  justify-content: center;
  overflow: hidden;
}

.favorite-song {
  justify-content: center;
  margin-top: 20px;
}

.fav-song-title {
  font-family: 'Cascadia Code', sans-serif;
  color: white;
  margin-bottom: 10px;
}

.leftside,
.rightside {
  height: 100vh;
  width: 100%;
}

.leftside {
  background-color: #494949;
}
.rightside {
  background-color: #181a1b;
}

@media screen and (min-width: 768px) {
  .leftside,
  .rightside {
    height: 100vh;
  }
}
@media screen and (max-width: 768px) {
  .leftside {
    height: 850px;
  }
}

/* Resume */
.res-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding-top: 100px;
}
.work {
  margin-right: 50px;
  margin-bottom: 20px;
}

.work-des-container {
  font-size: 15px;
  background-color: white;
  border-radius: 10px;
  margin-top: 10px;
}
.work-des {
  font-size: 15px;
  margin-left: 25px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 24px;
}

.courses {
  font-size: 15px;
  margin-right: 50px;
  margin-bottom: 20px;
}

.skills {
  font-size: 15px;
  margin-right: 50px;
  margin-bottom: 20px;
}

.education {
  margin-right: 50px;
  margin-bottom: 20px;
}
.edu-des {
  font-size: 15px;
  margin-left: 25px;
  margin-top: 10px;
  margin-bottom: 17px;
  margin-right: 71px;
}
.edu-des-container {
  font-size: 15px;
  background-color: white;
  border-radius: 10px;
  margin-top: 10px;
  padding-bottom: 17px;
}

/* projects*/
.project-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 100px;
}

.card {
  background: var(--white);
  width: 270px;
  height: 475px;
  margin: 10px;
  border-radius: 25px;
  z-index: 1;
  position: relative;
}

.card a {
  text-decoration: none;
  color: var(--black);
}

.card-img1 {
  height: 175px;
  width: 275px;
  object-fit: contain;
  margin-top: 15px;
}
.card-text1 {
  font-size: 12pt;
  margin: 5px 20px 0px;
}

.card:hover {
  background-color: #ffffb2;
  border-radius: 30px;
}
/* contact */
.title {
  text-transform: uppercase;
  margin-bottom: 35px;
  margin-top: 15px;
}

.form-body {
  text-align: center;
}

.reg-form {
  display: inline-block;
  border-style: solid;
  border-radius: 25px;
  border-width: thin;
  border-color: lightgrey;
  background-color: white;
  padding: 10px;
  margin-top: 100px;
}

.fill {
  margin-bottom: 30px;
}

.space {
  margin-bottom: 15px;
}

.text-box {
  display: inline-block;
  width: 100px;
  text-align: left;
  font-weight: bold;
  font-size: 18px;
  vertical-align: top;
}

.type-i {
  display: inline-block;
  width: 67%;
  padding-left: 5px;
}

.feedback {
  font-weight: bold;
  text-align: left;
  font-size: 18px;
  padding: 0;
}

.r-btn {
  display: block;
  text-align: left;
  margin-left: 26px;
}

.prim-btn {
  background-color: var(--green);
  font-family: sans-serif;
  color: white;
  font-size: 12pt;
  border-radius: 2px;
  width: 185px;
  height: 40px;
  border-color: green;
  border-style: solid;
  border-width: thin;
}

.sec-btn {
  background-color: white;
  font-family: sans-serif;
  color: green;
  font-size: 12pt;
  border-radius: 2px;
  width: 185px;
  height: 40px;
  border-color: green;
  border-style: solid;
  border-width: thin;
}

.prim-btn:hover {
  background-color: orange;
  border-color: black;
  color: black;
}

.sec-btn:hover {
  background-color: lightgreen;
  border-color: black;
  color: green;
}
.bottom {
  margin-bottom: 2em;
}

fieldset {
  border: 0;
}

.warning-container {
  border: 2px solid #ffc107;
  background-color: #fff3cd;
  padding: 20 px;
  border-radius: 2%;
  margin-bottom: 40px;
  text-align: center;
  position: relative;
}

